Revert "Fixed: Alignment of validation errors in labels"
This reverts commit d77cc9c01679d3d2978c6229ad42833147df9c39.

Did this to try resolve line endings blunder

--- a/src/UI/Content/form.less
+++ b/src/UI/Content/form.less
@@ -41,6 +41,7 @@
 
   .help-inline {
     display      : inline-block;
+    margin-top   : 8px;
     padding-left : 0px;
 
     @media (max-width: @screen-xs-max) {
